--- a/src/index.html
+++ b/src/index.html
@@ -14,19 +14,19 @@
     <table class="table" border='1'>
       <tbody>
         <tr class="tr">
-            <td id="td1"> </td>
-            <td id='td2'> </td>
-            <td id='td3'> </td>
+            <td id="td1" class="unchecked"> </td>
+            <td id='td2' class="unchecked"> </td>
+            <td id='td3' class="unchecked"> </td>
         </tr>
         <tr class="tr">
-            <td id='td4'> </td>
-            <td id='td5'> </td>
-            <td id='td6'> </td>
+            <td id='td4' class="unchecked"> </td>
+            <td id='td5' class="unchecked"> </td>
+            <td id='td6' class="unchecked"> </td>
         </tr>
         <tr class="tr">
-            <td id='td7'> </td>
-            <td id='td8'> </td>
-            <td id='td9'> </td>
+            <td id='td7' class="unchecked"> </td>
+            <td id='td8' class="unchecked"> </td>
+            <td id='td9' class="unchecked"> </td>
         </tr>
       </tbody>
     </table>
