Done and Animated sorta

--- a/src/index.html
+++ b/src/index.html
@@ -30,11 +30,12 @@
         </tr>
       </tbody>
     </table>
+    <button class="newGame">New Game</button>
   </main>
   <div class="overlay">
   <div class="dialog">
     <p>Restart Game?</p>
-    <button>OK</button>
+    <button class="ok">Play Again</button>
   </div>
   </div>
 </body>
